tests/testcases/invalid/semantic/51_this_in_static_method_context.ciel
// Error: 'this' used in static method

class MyClass {
    private:
        int value;

    public:
        MyClass(int v) {
            value = v;
        }

        static int get_default() {
            return this->value;  // Error: 'this' in static method
        }
};

int main() {
    int x = MyClass::get_default();
    return x;
}
